2008-02-15  Simon J. Gerraty  <sjg@void.crufty.net>

	* merge some patches from NetBSD pkgsrc.
	
	* makefile.boot.in (BOOTSTRAP_SYS_PATH): Allow better control of
	the MAKSYSPATH used during bootstrap. 

	* Makefile.in (BMAKE_VERSION): bump version to 20080215
	* Merge with NetBSD make, pick up:
	  o warn if non-space chars follow 'empty' in a conditional.

2008-01-18  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION): bump version to 20080118
	* Merge with NetBSD make, pick up:
	  o consider dependencies read from .depend as optional - dsl
	  o remember when buffer for reading makefile grows - dsl
	  o add -dl (aka LOUD) - David O'Brien

2007-10-22  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION): bump version to 20071022
	* Merge with NetBSD make, pick up:
	  o Allow .PATH<suffix> to be used for .include ""

	* boot-strap: source default settings from .bmake-boot-strap.rc

2007-10-16  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in: fix maninstall on various systems 
	  provided that our man.mk is used.
	  For non-BSD systems we install the preformatted page
	  into $MANDIR/cat1

2007-10-15  Simon J. Gerraty  <sjg@void.crufty.net>

	* boot-strap: make bmake.1 too, so maninstall works.

2007-10-14  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION): bump version to 20071014
	* Merge with NetBSD make, pick up:
	  o revamped handling of defshell - configure no longer needs to
	    know the content of the shells array - apb
	  o stop Var_Subst modifying its input - apb
	  o avoid calling ParseTrackInput too often - dsl

2007-10-11  Simon J. Gerraty  <sjg@void.crufty.net>

	* Makefile.in (BMAKE_VERSION): bump version to 20071011
	* Merge with NetBSD make, pick up:
	  o fix Shell_Init for case that _BASENAME_DEFSHELL is absolute path.

	* sigcompat.c: some tweaks for HP-UX 11.x based on 
	  patch from Tobias Nygren

	* configure.in: update handling of --with-defshell to match