@@ -1,0 +1,8 @@
+# $Id: qequals,v 1.1.1.1 2008/03/31 00:13:05 sjg Exp $
+
+M= i386
+V.i386= OK
+V.$M ?= bug
+
+all:
+	@echo 'V.$M ?= ${V.$M}'
